2006-01-04  Peter Dennis Bartok  <pbartok@novell.com>

	* ThemeWin32Classic.cs, ThemeClearlooks.cs: Dropped stupid scheme of 
	  drawing disabled text. Instead using the ColorGrayText color

2006-01-04  Jackson Harper  <jackson@ximian.com>

	* TreeNode.cs: redraw the node when its image index is changed.

2006-01-04  Peter Dennis Bartok  <pbartok@novell.com>

	* RichTextBox.cs: Same fix as last, just for SelectionColor. This
	  time I checked there are no others like it.

2006-01-04  Jackson Harper  <jackson@ximian.com>

	* AsyncMethodResult.cs: Use a ManualResetEvent instead of a mutex,
	this gives the behavoir I was looking for.
	* Control.cs: Special case Invoking EventHandlers, this matches MS
	and fixes part of bug #76326.

2006-01-04  Alexander Olk  <alex.olk@googlemail.com>

	* ThemeClearlooks.cs, FileDialog.cs:
	  - Reflect the latest Theme class changes
	  - Remove Mono.Unix.Syscall.time in FileDialg and replace it 
	    with DateTime
	    
2006-01-04  Alexander Olk  <alex.olk@googlemail.com>

	* Theme.cs: Cache UI resource images and resize them if needed

2006-01-03  Peter Dennis Bartok  <pbartok@novell.com>

	* RichTextBox.cs: FormatText is 1-based, make it so when SelectionFont
	  is called. This fixes the crash in Nexxia when setting the font
	  attributes in the chat. [However, RTF needs a look-over to make sure
	  that all SelectionXXX methods handle the special case that selection
	  is empty and therefore the change must be applied to all text starting
	  at the cursor/selection start]

2006-01-03  Peter Dennis Bartok  <pbartok@novell.com> 

	* XplatUI.cs, XplatUIDriver.cs, XplatUIX11.cs, XplatUIWin32.cs,
	  XplatUIOSX.cs: Added SendMessage and PostMessage methods
	* X11Keyboard.cs: Switched to new way of calling PostMessage

2006-01-03  Peter Dennis Bartok  <pbartok@novell.com>

	* Theme.cs: Added theme interface for images to allow the theme to
	  control what images are used for things like FileDialog, MessageBox
	  icons, etc.